--- a/myportfolio.html
+++ b/myportfolio.html
@@ -41,7 +41,7 @@
     <div class="card">
       <h3>E-commerce Website</h3>
       <p>Built with React, Node.js, and integrated payments.</p>
-      <a href="#">View Project</a>
+      <a href="https://emmafundi365.github.io/emmafundi365/ecommerce.html">View Project</a>
     </div>
     <div class="card">
       <h3>Portfolio Website</h3>
@@ -55,7 +55,7 @@
   <h2>Contact</h2>
   <p>Email: <a href="mailto:emmafundi365@gmail.com">emmafundi365@gmail.com</a></p>
   <p>Phone: +254 796 116 339</p>
-  <p>GitHub: <a href="https://github.com/emmanuelfundi" target="_blank">github.com/emmanuelfundi</a></p>
+  <p>GitHub: <a href="" target="_blank">github.com/emmanuelfundi</a></p>
 </section>
 
 <footer>
